--- a/src/components/main/generalComponents/buttons/button.module.css
+++ b/src/components/main/generalComponents/buttons/button.module.css
@@ -1,4 +1,4 @@
-@import url("../../utils/styles/base/_normalize.scss");
+@import url("../../../../utils/styles/base/_normalize.scss");
 .Button, .SelectButton, .PostButton {
   font-family: Inter, sans-serif;
 }
