--- a/src/components/main/generalComponents/spinner/style.module.scss
+++ b/src/components/main/generalComponents/spinner/style.module.scss
@@ -6,7 +6,7 @@
   justify-content: center;
   align-items: center;
   background-color: v.$dark-shade-08;
-  height: 597px;
+  height: 100vh;
   border-bottom: 1px solid v.$dark-shade-15;
 
   .Loader {
