--- a/src/components/main/contactForm/style.module.css
+++ b/src/components/main/contactForm/style.module.css
@@ -33,6 +33,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  gap: 20px;
 }
 .ResourceContainerRight form > :last-child > div span {
   position: relative;
@@ -104,7 +105,7 @@
     gap: 10px;
   }
   .ResourceContainerRight form > :last-child > div span input {
-    width: 24px;
+    min-width: 24px;
     height: 24px;
   }
   .ResourceContainerRight form > :last-child > div span input:after {
