--- a/src/components/main/contactForm/style.module.scss
+++ b/src/components/main/contactForm/style.module.scss
@@ -43,6 +43,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+        gap: 20px;
 
         span {
           position: relative;
@@ -123,7 +124,7 @@
             gap: 10px;
 
             input {
-              width: 24px;
+              min-width: 24px;
               height: 24px;
 
               &:after {
