--- a/src/components/main/generalComponents/statBlock/style.module.scss
+++ b/src/components/main/generalComponents/statBlock/style.module.scss
@@ -1,6 +1,6 @@
-@use '../../../utils/styles/base/_variables' as v;
-@use "../../../utils/styles/base/_mixin.scss" as m;
-@import url("../../../utils/styles/base/_normalize.scss");
+@use '../../../../utils/styles/base/variables' as v;
+@use "../../../../utils/styles/base/mixin" as m;
+@import url("../../../../utils/styles/base/_normalize.scss");
 
 .StatBlock {
   display: flex;
