--- a/src/components/header/style.module.scss
+++ b/src/components/header/style.module.scss
@@ -90,6 +90,10 @@
           width: 46px;
           object-fit: cover;
         }
+
+        canvas {
+          border-radius: 50%;
+        }
       }
 
       > :last-child {
